--- a/business/templates/MoneyReferringFriends.html
+++ b/business/templates/MoneyReferringFriends.html
@@ -20,7 +20,7 @@
 {% block content %}
     <div class="row page-header">
         <div class="col-lg-6 align-self-center ">
-            <h2>Make Extra Money With Our Affiliate Or Partner Program</h2>
+            <h2>Make Extra Money With Our Affiliate Program</h2>
             </ol></div>
     </div>
 
@@ -45,8 +45,7 @@
 
         </style>
         <br>
-        <b><h2 style="text-align:center;">Make Extra Money Today By Joining Our Affiliate Or <br>White Label Partner
-            Program! (Both Are Free To Join)</h2></b>
+        <b><h2 style="text-align:center;">Make Extra Money Today By Joining Our Affiliate Program</h2></b>
         <br><br>
         <div class="row">
             <div class="col-md-6 col-sm-6">
