--- a/business/templates/businessCreditBuilding/faxNumber.html
+++ b/business/templates/businessCreditBuilding/faxNumber.html
@@ -27,9 +27,7 @@
     <section class="main-content">
         <div class="row">
             <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/41BYcPJqi5M" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                <iframe width="100%" height="515" src="https://www.youtube.com/embed/xcHNT5-QDuM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
         <div class="row justify-content-center">
