--- a/business/templates/userData/BusinessCreditStepsStandalone.html
+++ b/business/templates/userData/BusinessCreditStepsStandalone.html
@@ -7,9 +7,7 @@
     <section class="main-content">
         <div class="row">
             <div class="col-md-12">
-                <iframe width="100%" height="355" src="https://www.youtube.com/embed/u4GqnIkb4cY" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                <iframe width="100%" height="515" src="https://www.youtube.com/embed/86-3dyRmSXw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h3> Watch The Introduction Video To Understand How To Use The Extension</h3>
             </div>
         </div>
