--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -207,7 +207,7 @@
                     <a href="/{{ request.resolver_match.app_name }}/insurance-products" class="nav-link"> Insurance Products </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'chromeextension:chromeextensionindex' %}" class="nav-link"> Go To Chrome Extension Portal </a>
+                    <a href="{% url 'chromeextension:chromeextensionindex' %}" target="_blank" class="nav-link"> Go To Chrome Extension Portal </a>
                 </li>
 
                 <li class="nav-item">
