--- a/user/templates/my_progress.html
+++ b/user/templates/my_progress.html
@@ -74,9 +74,9 @@
                         Your Portal Information
                     </div>
                 </div>
-                <div class="col-md-8 col-xs-12">
+                <div class="row justify-content-center">
                     {% if on_payment_plan %}
-                        <div class="card">
+                        <div class="card mx-2 text-center" style="width: 21rem;">
                             <div class="card-body">
                                 <p>Your Payment Plan Portal</p>
                                 <a class="btn btn-primary" href="{% url 'yourplan:yourplan' %}"
@@ -85,7 +85,7 @@
                             </div>
                         </div>
                     {% endif %}
-                    <div class="card">
+                    <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Apply For Loans</p>
                             <a class="btn btn-primary" href="{% url 'loanportal:loanapplication' %}" target="_blank">Click
@@ -93,7 +93,7 @@
                         </div>
                     </div>
 
-                    <div class="card">
+                    <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Google Chrome Extension Portal</p>
                             <a class="btn btn-primary" href="{% url 'chromeextension:chromeextensionindex' %}" target="_blank">Click
@@ -101,7 +101,7 @@
                         </div>
                     </div>
 
-                    <div class="card">
+                    <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Create Your Specific Portal / <br> View Saved Portals</p>
                             <a class="btn btn-primary" href="{% url 'business:create_specific_portal' %}" target="_blank">
@@ -109,7 +109,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Choose Your Goal With This Platform</p>
                             <a class="btn btn-primary" href="{% url 'business:goals' %}" target="_blank">
@@ -117,7 +117,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Go To Affiliate Agent Portal</p>
                             <a class="btn btn-primary" href="https://getdinerotoday.tapfiliate.com/" target="_blank">
@@ -125,7 +125,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Purchase Dunn & Bradstreet Products</p>
                             <a class="btn btn-primary" href="{% url 'products:dnbproducts' %}" target="_blank">
@@ -133,7 +133,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Get The Online Tools To Grow Your Business</p>
                             <a class="btn btn-primary" href="{% url 'onlinetools:onlinetoolshome' %}" target="_blank">
@@ -141,7 +141,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Go To Marketing Couse</p>
                             <a class="btn btn-primary" href="{% url 'marketingcourse:mainfile' %}" target="_blank">
@@ -149,7 +149,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Go To Business Credit Building Course</p>
                             <a class="btn btn-primary" href="{% url 'businesscreditcourse:home' %}" target="_blank">
