--- a/business/templates/userData/checkout.html
+++ b/business/templates/userData/checkout.html
@@ -11,7 +11,8 @@
     <section class="main-content">
         <div class="row">
             <div class="col-md-12">
-                Successfully paid {{ amount }}
+                Successfully paid ${{ amount }}<br>
+                <a class="btn btn-primary" href="{% url "homepage" %}">Go to homepage</a>
             </div>
         </div>
 
