--- a/business/templates/checkout/stripeCheckout.html
+++ b/business/templates/checkout/stripeCheckout.html
@@ -3,11 +3,6 @@
 {% block extrastyle %}
     <style type="text/css">
 
-        form {
-            width: 480px;
-            margin: 20px auto;
-        }
-
         .group {
             background: white;
             box-shadow: 0 7px 14px 0 rgba(49, 49, 93, 0.10),
@@ -62,31 +57,6 @@
             color: #CFD7E0;
         }
 
-        button {
-            float: left;
-            display: block;
-            background: #666EE8;
-            color: white;
-            box-shadow: 0 7px 14px 0 rgba(49, 49, 93, 0.10),
-            0 3px 6px 0 rgba(0, 0, 0, 0.08);
-            border-radius: 4px;
-            border: 0;
-            margin-top: 20px;
-            font-size: 15px;
-            font-weight: 400;
-            width: 100%;
-            height: 40px;
-            line-height: 38px;
-            outline: none;
-        }
-
-        button:focus {
-            background: #555ABF;
-        }
-
-        button:active {
-            background: #43458B;
-        }
 
         .outcome {
             float: left;
@@ -128,56 +98,75 @@
         </div>
     </div>
     <section class="main-content">
-        <div class="row">
-            <div class="col-md-12">
-                <table class="table">
-                    <thead class="thead-light">
-                    <tr>
-                        <th>Name</th>
-                        <th>Price</th>
-{#                        <th>Price</th>  #}
-                    </tr>
-                    </thead>
-                    {% for product in products %}
-                        <tr class="bg-white">
-                            <td>{{ product.name }}</td>
-                            <td>${{ product.price_amount }}</td>
-{#                            <td>{{ product.price }}</td>#}
-                        </tr>
-                    {% endfor %}
-                </table>
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card padding-15">
+                    <div class="card-header">Your cart:</div>
+                    <div class="card-body">
 
+                        <table class="table">
+                            <thead class="thead-light">
+                            <tr>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th style="width: 1%;">Remove</th>
+                            </tr>
+                            </thead>
+                            {% for product in products %}
+                                <tr class="bg-white">
+                                    <td>{{ product.name }}</td>
+                                    <td>${{ product.price_amount }}</td>
+                                    <td>
+                                        <form action="{% url "business:delete_item" %}" method="post">{% csrf_token %}
+                                            <input name="delete_item" type="hidden" value="{{ product.price }}">
+                                            <button type="submit" class="btn btn-primary">Remove</button>
+                                        </form>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            <tr class="bg-white">
+                                <td class="text-right border-0">Total:</td>
+                                <td>${{ amount }}</td>
+                                <td class="border-0"></td>
+                            </tr>
+                        </table>
+                        {% if add_card %}
+                            <form action="{% url "business:subscription_stripe" %}" method="post" id="stripe_form">{% csrf_token %}
+                                <div>
+                                    Add card:
+                                    <div class="group">
+                                        <label>
+                                            <span>Name</span>
+                                            <input name="cardholder-name" class="field" placeholder="Jane Doe"/>
+                                        </label>
+                                    </div>
+                                    <div class="group">
+                                        <label>
+                                            <span>Card</span>
+                                            <div id="card-element" class="field"></div>
+                                        </label>
+                                    </div>
+                                    <input id="stripeToken" name="stripeToken" type="hidden"/>
+                                </div>
 
-                {% if add_card %}
-                    <form action="{% url "business:subscription_stripe" %}" method="post">{% csrf_token %}
-                        <div class="group">
-                            <label>
-                                <span>Name</span>
-                                <input name="cardholder-name" class="field" placeholder="Jane Doe"/>
-                            </label>
-                        </div>
-                        <div class="group">
-                            <label>
-                                <span>Card</span>
-                                <div id="card-element" class="field"></div>
-                            </label>
-                        </div>
-                        <input id="stripeToken" name="stripeToken" type="hidden"/>
-                        <button type="submit">Pay ${{ amount }}</button>
-                        <div class="outcome">
-                            <div class="error" role="alert"></div>
-                            <div class="success">
-                                Success! Your Stripe token is <span class="token"></span>
-                            </div>
-                        </div>
-                    </form>
-                {% else %}
-                    <form action="{% url "business:subscription_stripe" %}" method="post">{% csrf_token %}
-                        Selected card: {{ def_card.card_brand }} {{ def_card.card_last4 }}
-                        <input id="stripeToken" name="stripeToken" type="hidden"/>
-                        <button type="submit">Pay ${{ amount }}</button>
-                    </form>
-                {% endif %}
+                                <button type="submit" class="btn btn-primary btn-block">Pay ${{ amount }}</button>
+                                <div class="outcome">
+                                    <div class="error" role="alert"></div>
+                                    <div class="success">
+                                        Success! Your Stripe token is <span class="token"></span>
+                                    </div>
+                                </div>
+                            </form>
+                        {% else %}
+                            <form action="{% url "business:subscription_stripe" %}" method="post">{% csrf_token %}
+                                Selected card: {{ def_card.card_brand }} {{ def_card.card_last4 }}<br><br>
+                                <input id="stripeToken" name="stripeToken" type="hidden"/>
+                                <button type="submit" class="btn btn-primary btn-block">Pay ${{ amount }}</button>
+                            </form>
+                        {% endif %}
+                    </div>
+
+                </div>
             </div>
         </div>
     </section>
@@ -233,13 +222,14 @@
             });
 
 
-            document.querySelector('form').addEventListener('submit', async function (e) {
+            document.getElementById('stripe_form').addEventListener('submit', async function (e) {
                 e.preventDefault();
-                var form = document.querySelector('form');
+                var form = document.getElementById('stripe_form');
                 var extraDetails = {
                     name: form.querySelector('input[name=cardholder-name]').value,
                 };
                 var res = await stripe.createToken(card, extraDetails)
+                console.log(res)
                 var isOk = setOutcome(res);
                 (isOk && $('form').submit());
             });
