--- a/business/templates/businessCreditBuilding/faxNumber.html
+++ b/business/templates/businessCreditBuilding/faxNumber.html
@@ -27,7 +27,9 @@
     <section class="main-content">
         <div class="row">
             <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/xcHNT5-QDuM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="515" src="https://www.youtube.com/embed/xcHNT5-QDuM" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -135,37 +137,33 @@
                         <li>Receive 250 pages/mo</li>
 
                         <br>
-                        <form action="{% url 'business:charge' %}" method="post">{% csrf_token %}
-                            <div class="text-center">
-                                Fax Numbers To Choose From<br>
-                                <select class="custom-select mb-2">
-                                    <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>
-                                    <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>
-                                    <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>
-                                    <option value="855 (Toll Free Prefix)">855 (Toll Free Prefix)</option>
-                                    <option value="844 (Toll Free Prefix)">844 (Toll Free Prefix)</option>
-                                    <option value="833 (Toll Free Prefix)">833 (Toll Free Prefix)</option>
-                                    <option value="800 (Toll Free Prefix)">800 (Toll Free Prefix)</option>
-                                </select><br>
-                                 Monthly option - $40 USD:<br>
-                                    <input type="hidden" id="amount" name="amount" value="4000">
-                                    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                                            data-key="{{ stripe_key }}"
-                                            data-description="A Django Charge"
-                                            data-amount="4000"
-                                            data-locale="auto"></script><br><br>
-                                Save 50% with annual option - $240 USD:<br>
-                                    <input type="hidden" id="amount" name="amount" value="24000">
-                                    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                                            data-key="{{ stripe_key }}"
-                                            data-description="A Django Charge"
-                                            data-amount="24000"
-                                            data-locale="auto"></script>
-                            </div>
+                        <div class="text-center">
+                            Fax Numbers To Choose From<br>
+                            <select class="custom-select mb-2">
+                                <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>
+                                <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>
+                                <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>
+                                <option value="855 (Toll Free Prefix)">855 (Toll Free Prefix)</option>
+                                <option value="844 (Toll Free Prefix)">844 (Toll Free Prefix)</option>
+                                <option value="833 (Toll Free Prefix)">833 (Toll Free Prefix)</option>
+                                <option value="800 (Toll Free Prefix)">800 (Toll Free Prefix)</option>
+                            </select><br>
+                            Monthly option - $40 USD:<br>
+                            <form method="post">
+                                {% csrf_token %}
+                                <input type="hidden" class="btn btn-primary" value="monthly" name="variant">
+                                <button type="submit" class="btn btn-primary">Order now</button>
+                            </form>
+                            <br><br>
+                            Save 50% with annual option - $240 USD:<br>
+                            <form method="post">
+                                {% csrf_token %}
+                                <input type="hidden" class="btn btn-primary" value="yearly" name="variant">
+                                <button type="submit" class="btn btn-primary">Order now</button>
+                            </form>
+                        </div>
 
 
-
-                        </form>
                     </div>
                 </div>
             </div>
