--- a/chromeextension/templates/chromeextension-index.html
+++ b/chromeextension/templates/chromeextension-index.html
@@ -10,7 +10,7 @@
         <h2>Introduction Video On How To Use Chrome Extension</h2>
     </div>
     <section class="main-content">
-      <iframe width="100%" height="615" src="https://www.youtube.com/embed/u4GqnIkb4cY" frameborder="0"
+      <iframe width="100%" height="615" src="https://www.youtube.com/embed/Z1HK9uSOMCI" frameborder="0"
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
               <br><br>
